--- a/Myopencv/Myopencv.vcxproj
+++ b/Myopencv/Myopencv.vcxproj
@@ -73,12 +73,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.15063.0\ucrt;D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;$(IncludePath)</IncludePath>
     <ReferencePath>E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(ReferencePath)</ReferencePath>
     <LibraryPath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;$(IncludePath)</IncludePath>
+    <IncludePath>C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.15063.0\ucrt;D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;$(IncludePath)</IncludePath>
     <LibraryPath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
