--- a/Myopencv/Myopencv.vcxproj
+++ b/Myopencv/Myopencv.vcxproj
@@ -19,7 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ConectDomain.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ConectDomain.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
@@ -73,13 +77,21 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <IncludePath>C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.15063.0\ucrt;D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;$(IncludePath)</IncludePath>
+    <IncludePath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;D:\ZZH\VS_2017\Myopencv\Myopencv;$(IncludePath)</IncludePath>
     <ReferencePath>E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(ReferencePath)</ReferencePath>
-    <LibraryPath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
-    <IncludePath>C:\Program Files %28x86%29\Windows Kits\10\Include\10.0.15063.0\ucrt;D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;$(IncludePath)</IncludePath>
-    <LibraryPath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;E:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+    <IncludePath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;D:\ZZH\VS_2017\Myopencv\Myopencv;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
+    <IncludePath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;D:\ZZH\VS_2017\Myopencv\Myopencv;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
+    <IncludePath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\include;D:\ZZH\VS_2017\Myopencv\Myopencv;$(IncludePath)</IncludePath>
+    <LibraryPath>D:\ZZH\Opencv\SaveFile_opencv\opencv3_1\opencv\build\x64\vc14\lib;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -88,6 +100,9 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
+    <Link>
+      <AdditionalDependencies>opencv_world310.lib;%(AdditionalDependencies)</AdditionalDependencies>
+    </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -97,7 +112,7 @@
       <ConformanceMode>true</ConformanceMode>
     </ClCompile>
     <Link>
-      <AdditionalDependencies>opencv_world310d.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>opencv_world310.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -112,6 +127,7 @@
     <Link>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
+      <AdditionalDependencies>opencv_world310.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
