--- a/Myopencv/Myopencv.vcxproj
+++ b/Myopencv/Myopencv.vcxproj
@@ -24,6 +24,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="ConectDomain.h" />
+    <ClInclude Include="_ZZH_.hpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
